Change default configuration of `undocumented_unsafe_blocks`
This patch sets the two configuration options for
`undocumented_unsafe_blocks` to `true` by default: these are
`accept-comment-above-statement` and `accept-comment-above-attributes`.
Having these values `false` by default prevents what many users would
consider clean code, e.g. placing the `// SAFETY:` comment above a
single-line functino call, rather than directly next to the argument.

changelog: [`undocumented_unsafe_blocks`]: set
`accept-comment-above-statement` and `accept-comment-above-attributes`
to `true` by default.

--- a/tests/ui-toml/undocumented_unsafe_blocks/clippy.toml
+++ b/tests/ui-toml/undocumented_unsafe_blocks/clippy.toml
@@ -1,2 +1,2 @@
-accept-comment-above-statement = true
-accept-comment-above-attributes = true
+accept-comment-above-statement = false
+accept-comment-above-attributes = false
